# pyru

./: .gitignore  AGENTS.md  README.md  cli.py  main.py  perf.data  requirements.txt  scraper.py
.github/workflows/: release.yml
benchmarks/: benchmark.py  http_server.py  real_world_benchmark.py  scrapy_spider.py  test_page.html
rust_scraper/: Cargo.toml
rust_scraper/src/: lib.rs
templates/: index.html
tests/: test_main.py
