[package]
name = "rust_scraper"
version = "0.7.0"
edition = "2021"

[lib]
name = "rust_scraper"
crate-type = ["cdylib"]

[dependencies]
scraper = "0.19.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
futures = "0.3"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
